--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,9 @@
   --clr-dark: #000000;
   --clr-dark2: #061930;
   --clr-accent: #9CF6FB;
+
+  --bs: 0.25em 0.25em 0.75em rgba(0,0,0,0.25),
+  0.125em 0.125em 0.25em rgba(0,0,0,0.25);
 }
 body {
     background-color: var(--clr-dark2);
@@ -56,17 +59,20 @@ body {
     padding: 15px;
   }
 
-  #btn {
+  .button {
     background-color: var(--clr-dark);
     color: var(--clr-light);
     border: none;
     padding: 15px 32px;
     text-align: center;
-    text-decoration:none;
     display: inline-block;
     font-size: 16px;
+    cursor: pointer;
+    box-shadow: var(--bs);
   }
-
+  .button:active {
+    transform: translateY(4px);
+  }
   .picker-container {
 
     padding: 5px;
